// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueDiff can diff message 1`] = `
<IssueDiff
  api={
    Client {
      "_chain": [Function],
      "_wrapRequest": [Function],
      "bulkUpdate": [Function],
      "handleRequestError": [Function],
      "hasProjectBeenRenamed": [Function],
    }
  }
  baseEventId="latest"
  baseIssueId="base"
  orgId="org-slug"
  projectId="project-slug"
  targetEventId="latest"
  targetIssueId="target"
>
  <StyledIssueDiff
    loading={false}
  >
    <div
      className="css-1ap3513-StyledIssueDiff e1mqtsvu0"
    >
      <SplitDiff
        base="Foo World"
        key="0"
        target="Hello World"
        type="words"
      >
        <SplitTable>
          <table
            className="css-wsqk0b-SplitTable earab4v0"
          >
            <SplitBody>
              <tbody
                className="css-19qmpmx-SplitBody earab4v1"
              >
                <tr
                  key="0"
                >
                  <Cell
                    isRemoved={
                      Object {
                        "added": undefined,
                        "count": 1,
                        "removed": true,
                        "value": "Foo",
                      }
                    }
                  >
                    <td
                      className="css-cpyxzz-Cell earab4v2"
                    >
                      <Line>
                        <div
                          className="css-bjvbcj-Line earab4v4"
                        >
                          <Word
                            isRemoved={true}
                            key="0"
                          >
                            <span
                              className="css-1hluz4h-Word earab4v5"
                            >
                              Foo
                            </span>
                          </Word>
                          <Word
                            key="1"
                          >
                            <span
                              className="css-1dmt934-Word earab4v5"
                            >
                               World
                            </span>
                          </Word>
                        </div>
                      </Line>
                    </td>
                  </Cell>
                  <Gap>
                    <td
                      className="css-yrby37-Gap earab4v3"
                    />
                  </Gap>
                  <Cell
                    isAdded={
                      Object {
                        "added": true,
                        "count": 1,
                        "removed": undefined,
                        "value": "Hello",
                      }
                    }
                  >
                    <td
                      className="css-uc8op2-Cell earab4v2"
                    >
                      <Line>
                        <div
                          className="css-bjvbcj-Line earab4v4"
                        >
                          <Word
                            isAdded={true}
                            key="0"
                          >
                            <span
                              className="css-1pqukun-Word earab4v5"
                            >
                              Hello
                            </span>
                          </Word>
                          <Word
                            key="1"
                          >
                            <span
                              className="css-1dmt934-Word earab4v5"
                            >
                               World
                            </span>
                          </Word>
                        </div>
                      </Line>
                    </td>
                  </Cell>
                </tr>
              </tbody>
            </SplitBody>
          </table>
        </SplitTable>
      </SplitDiff>
    </div>
  </StyledIssueDiff>
</IssueDiff>
`;

exports[`IssueDiff can dynamically import SplitDiff 1`] = `
<IssueDiff
  api={
    Client {
      "_chain": [Function],
      "_wrapRequest": [Function],
      "bulkUpdate": [Function],
      "handleRequestError": [Function],
      "hasProjectBeenRenamed": [Function],
    }
  }
  baseEventId="latest"
  baseIssueId="base"
  orgId="org-slug"
  projectId="project-slug"
  targetEventId="latest"
  targetIssueId="target"
>
  <StyledIssueDiff
    loading={false}
  >
    <div
      className="css-1ap3513-StyledIssueDiff e1mqtsvu0"
    >
      <SplitDiff
        base="SyntaxError: Unexpected token else
  at ? (/hiventy/kraken-prod/issues/438681831/)"
        key="0"
        target="SyntaxError: Unexpected token else
  File \\"/hiventy/kraken-prod/issues/438681831/\\""
        type="words"
      >
        <SplitTable>
          <table
            className="css-wsqk0b-SplitTable earab4v0"
          >
            <SplitBody>
              <tbody
                className="css-19qmpmx-SplitBody earab4v1"
              >
                <tr
                  key="0"
                >
                  <Cell>
                    <td
                      className="css-13bglbj-Cell earab4v2"
                    >
                      <Line>
                        <div
                          className="css-bjvbcj-Line earab4v4"
                        >
                          <Word
                            key="0"
                          >
                            <span
                              className="css-1dmt934-Word earab4v5"
                            >
                              SyntaxError: Unexpected token else
                            </span>
                          </Word>
                        </div>
                      </Line>
                    </td>
                  </Cell>
                  <Gap>
                    <td
                      className="css-yrby37-Gap earab4v3"
                    />
                  </Gap>
                  <Cell>
                    <td
                      className="css-13bglbj-Cell earab4v2"
                    >
                      <Line>
                        <div
                          className="css-bjvbcj-Line earab4v4"
                        >
                          <Word
                            key="0"
                          >
                            <span
                              className="css-1dmt934-Word earab4v5"
                            >
                              SyntaxError: Unexpected token else
                            </span>
                          </Word>
                        </div>
                      </Line>
                    </td>
                  </Cell>
                </tr>
                <tr
                  key="1"
                >
                  <Cell
                    isRemoved={
                      Object {
                        "added": undefined,
                        "count": 1,
                        "removed": true,
                        "value": "at",
                      }
                    }
                  >
                    <td
                      className="css-cpyxzz-Cell earab4v2"
                    >
                      <Line>
                        <div
                          className="css-bjvbcj-Line earab4v4"
                        >
                          <Word
                            key="0"
                          >
                            <span
                              className="css-1dmt934-Word earab4v5"
                            >
                                
                            </span>
                          </Word>
                          <Word
                            isRemoved={true}
                            key="1"
                          >
                            <span
                              className="css-1hluz4h-Word earab4v5"
                            >
                              at
                            </span>
                          </Word>
                          <Word
                            key="2"
                          >
                            <span
                              className="css-1dmt934-Word earab4v5"
                            >
                               
                            </span>
                          </Word>
                          <Word
                            isRemoved={true}
                            key="3"
                          >
                            <span
                              className="css-1hluz4h-Word earab4v5"
                            >
                              ? (/
                            </span>
                          </Word>
                          <Word
                            key="4"
                          >
                            <span
                              className="css-1dmt934-Word earab4v5"
                            >
                              hiventy/kraken-prod/issues/438681831
                            </span>
                          </Word>
                          <Word
                            isRemoved={true}
                            key="5"
                          >
                            <span
                              className="css-1hluz4h-Word earab4v5"
                            >
                              /)
                            </span>
                          </Word>
                        </div>
                      </Line>
                    </td>
                  </Cell>
                  <Gap>
                    <td
                      className="css-yrby37-Gap earab4v3"
                    />
                  </Gap>
                  <Cell
                    isAdded={
                      Object {
                        "added": true,
                        "count": 1,
                        "removed": undefined,
                        "value": "File",
                      }
                    }
                  >
                    <td
                      className="css-uc8op2-Cell earab4v2"
                    >
                      <Line>
                        <div
                          className="css-bjvbcj-Line earab4v4"
                        >
                          <Word
                            key="0"
                          >
                            <span
                              className="css-1dmt934-Word earab4v5"
                            >
                                
                            </span>
                          </Word>
                          <Word
                            isAdded={true}
                            key="1"
                          >
                            <span
                              className="css-1pqukun-Word earab4v5"
                            >
                              File
                            </span>
                          </Word>
                          <Word
                            key="2"
                          >
                            <span
                              className="css-1dmt934-Word earab4v5"
                            >
                               
                            </span>
                          </Word>
                          <Word
                            isAdded={true}
                            key="3"
                          >
                            <span
                              className="css-1pqukun-Word earab4v5"
                            >
                              "/
                            </span>
                          </Word>
                          <Word
                            key="4"
                          >
                            <span
                              className="css-1dmt934-Word earab4v5"
                            >
                              hiventy/kraken-prod/issues/438681831
                            </span>
                          </Word>
                          <Word
                            isAdded={true}
                            key="5"
                          >
                            <span
                              className="css-1pqukun-Word earab4v5"
                            >
                              /"
                            </span>
                          </Word>
                        </div>
                      </Line>
                    </td>
                  </Cell>
                </tr>
              </tbody>
            </SplitBody>
          </table>
        </SplitTable>
      </SplitDiff>
    </div>
  </StyledIssueDiff>
</IssueDiff>
`;

exports[`IssueDiff is loading when initially rendering 1`] = `
<StyledIssueDiff
  loading={true}
>
  <LoadingIndicator />
</StyledIssueDiff>
`;
